# first-api-ml-render

./: .coverage  README.md  main.py  model.pkl  pyproject.toml  requirements.txt
scripts/: train_model.py
tests/: test_api.py
