[tool.poetry]
name = "first-api-ml-render"
version = "0.1.0"
description = "API FastAPI exposant un modèle scikit-learn (démo / Render)."
authors = ["Karl <karl.sondeji@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115,<1"
uvicorn = { version = ">=0.32,<1", extras = ["standard"] }
scikit-learn = ">=1.4,<2"
joblib = ">=1.4,<2"
pydantic = ">=2.10,<3"
httpx = ">=0.27,<1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
pytest-cov = ">=5,<7"

[build-system]
requires = ["poetry-core>=2.0.0,<3"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Permet `import main` depuis tests/ même si le répertoire courant n’est pas la racine du projet.
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["main"]
